# mini-readability

./: .gitmodules  CMakeLists.txt
curlpp/: CMakeLists.txt
curlpp/curlpp/: curlpp.hpp  option.hpp  options.hpp  session.hpp
src/: app.cpp  app.hpp  curl_loader.cpp  curl_loader.hpp  loader.cpp  loader.hpp  main.cpp  parser.cpp  parser.hpp  rule.cpp  rule.hpp  tidy_parser.cpp  tidy_parser.hpp
src/curlpp/: options.hpp
